--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "bcrypt": "^5.1.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-session": "^1.18.1",
+        "firebase": "^11.1.0",
         "jsonwebtoken": "^9.0.1",
         "sqlite3": "^5.1.7"
     }
